# implementations

./: README.md  index.html
BDDStab/: .cache  .classpath  .project  Readme  bddstab.diff  build.sbt  linuxinstall.sh  test.sc
BitwiseAI/: BitwiseAI.ml  README
CacheAudit-0.1/: LICENSE  cacheaudit.ml  logger.ml  logger.mli
CacheAudit-0.1/abstract_domains/: architectureAD.ml  memAD.ml  utils.ml  utils.mli
CacheAudit-0.1/iterator/: abstractInstr.ml  cfg.ml  cfg.mli  iterator.ml
CacheAudit-0.1/x86_frontend/: elf.ml  execInterfaces.ml  x86Headers.mli  x86Parse.mli  x86Print.ml  x86Print.mli  x86Types.ml  x86Util.mli
Z3-str/: LICENSE.txt  Makefile  README.txt  Z3-str.py  strTheory.h  testMain.cpp
Z3-str/test/: concat-003  concat-006  concat-007  concat-009  concat-010  concat-016  concat-018  concat-019  concat-025  concat-027  concat-028  concat-031  concat-033  concat-034  concat-036  concat-043  concat-044  concat-046  concat-048  concat-054  concat-058  concat-059  concat-064  concat-066  concat-068  concat-069  concat-071  concat-073  concat-074  concat-079  concat-081  concat-082  concat-083  concat-084  concat-085  concat-087  concat-088  contains-002  contains-005  contains-009  (+18 more)
Z3-str/testcase_in_kaluza/: 1.bettermatch1.readable.z3  11.substr.readable.z3  13.big1.readable.z3  2.bettermatch2.readable.z3  4.idxof_branchsolve.readable.z3  7.replace.corecstrs.readable.z3
arm-thumb-decompiler-plugin/trunk/: Util.cpp  arm.vcproj  arm.vcxproj  arm.vcxproj.filters  arm_pseudo.cpp
asbint/: absint.v
avalanche/: configure.ac
avalanche/.svn/: wc.db
avalanche/agent/: Makefile.am  dist.cpp  util.h
avalanche/debian/: README  prerm
avalanche/driver/include/: Error.h  STP_Executor.h  Thread.h
avalanche/driver/src/: Entry.cpp  Error.cpp  ExecutionLogBuffer.cpp  Makefile.am  SocketBuffer.cpp  Thread.cpp
avalanche/samples/simple/: divclient.c  sample2.c  separate_analysis_sample.c
avalanche/stp-ver-0.1-11-18-2008/: configure.ac
avalanche/stp-ver-0.1-11-18-2008/AST/: AST.h  ASTUtil.h  Makefile.am
avalanche/stp-ver-0.1-11-18-2008/c_interface/: Makefile.am
avalanche/stp-ver-0.1-11-18-2008/sat/core/: Main.C
avalanche/stp-ver-0.1-11-18-2008/sat/mtl/: Makefile.am
avalanche/stp-ver-0.1-11-18-2008/simplifier/: bvsolver.cpp
avalanche/valgrind/: Makefile.all.am  configure.in
avalanche/valgrind/coregrind/m_syswrap/: syswrap-amd64-linux.c  syswrap-arm-linux.c  syswrap-linux.c
avalanche/valgrind/include/: avalanche.h  pub_tool_clientstate.h
avalanche/valgrind/tracegrind/: copy.h  tg_dhelpers_arm.c  tg_dhelpers_x86.c
beaengine/.svn/: wc.db
beaengine/PyLookInside/: ArgumentFive.py  ArgumentTwo.py  FileDialog.py  ListCtrlVirtual.py  Palette.py
beaengine/examples/: CMakeLists.txt  basic.c  options.c
bincfi/cfi_no_svn/: INSTALL
boomerang/: Makefile.am  boomerang.cpp  configure.ac  driver.cpp  functest.sh
boomerang/CVS/: Entries
boomerang/c/: CTest.cpp  Makefile  ansi-c.l  ansi-c.y  testC.cc
boomerang/codegen/: chllcode.cpp  chllcode.h
boomerang/db/: Makefile.in  ParserTest.cpp  ProcTest.h  ProgTest.cpp  StatementTest.h  basicblock.cpp  exp.cpp  managed.cpp  register.cpp  signature.cpp  sslinst.cpp  statement.cpp  visitor.cpp
boomerang/frontend/: FrontPentTest.cpp  FrontSparcTest.cpp  mipsfrontend.cpp  njmcDecoder.cpp  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.h  sparcdecoder.cpp  sparcdecoder.h  st20decoder.cpp  testFront.cpp
boomerang/include/: BinaryFile.h  boomerang.h  cfg.h  cluster.h  dataflow.h  decoder.h  frontend.h  hllcode.h  prog.h  type.h  types.h  visitor.h
boomerang/loader/: DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfBinaryFile.cpp  ElfBinaryFile.h  ExeBinaryFile.h  HpSomBinaryFile.h  MachOBinaryFile.h  Makefile.am  Makefile.in  PalmBinaryFile.h  SymTab.cpp  SymTab.h  Win32BinaryFile.cpp  Win32BinaryFile.h  testLoader.cpp
boomerang/transform/: Makefile.am  Makefile.in  generic.cpp  rdi.h  transformation-scanner.cpp
boomerang/type/: constraint.cpp
boomerang/util/: UtilTest.cpp
code_examples/: plot_hex.py
constraint_logic_fuzzing/: README.txt  approx_eval.pl  approx_evaluator.pl  eval_binop2_clp.pl  evaluation.pl  helpers.pl  inheritance.pl  js_err.pl  js_inher.pl  js_overflow.pl  js_withclo.pl  with_closures_clp.pl  write_ast.pl
coq_macro_assembler/: GNUmakefile  Makefile  PPDPGUIDE.v  README  bitsopsprops.v  bitsrep.v  buildiso.bat  cstring.v  nathelp.v  pfun.v  pmap.v  pmapprops.v  reader.v  septac.v  sparsefun.v  triple.v
coq_macro_assembler/charge/: CSetoid.v  bilogic.v  iltac.v  later.v  sepalg.v
coq_macro_assembler/x86/: basic.v  call.v  encdechelp.v  encinstr.v  (+19 more)
dig/: dig_inv.py  dig_polynomials.py  smt_z3py.py
fuzzgrind/fuzzgrind/valgrind-3.4.1/fuzzgrind/: Makefile.am
hampi/: .classpath  .project  INSTALL.txt  README_dev.txt  build.xml
hlsl/: GNUmakefile  Makefile  bitsops.v  bitsprops.v  bitstest.v  codec.v  pfun.v  pmap.v  pmapprops.v  reader.v  spectac.v  writer.v
jakstab/: .classpath  .hgtags  compile.bat  compile.sh  jakstab.bat
js/: reveal.js
measurements/: properties.html  properties.org
rxxr/: LICENCE.rtf
rxxr2/: AnalyserMain.ml  AnalyserMain.mli  Beta.ml  Beta.mli  Common.ml  Common.mli  Flags.ml  Flags.mli  Nfa.ml  Nfa.mli  ParsingData.ml  ParsingData.mli  ParsingMain.ml  ParsingMain.mli  PatternLexer.mll  PatternParser.mly  Phi.ml  Phi.mli  Product.ml  Product.mli  README  RegexLexer.mll  RegexParser.mly  RegexScanner.ml  RegexScanner.mli  RuleScanner.ml  RuleScanner.mli  Run.ml  Triple.ml  Triple.mli  Util.ml  Util.mli  Word.ml  Word.mli  XAnalyser.ml  XAnalyser.mli  Y1Analyser.ml  Y1Analyser.mli  Y2Analyser.ml  Y2Analyser.mli  (+5 more)
smc/: AbCfg.v  AbCfg2.v  CompleteLattice.v  DebugMemDom.v  FirstGotoAnalysis.v  Goto.v  GotoAnalysis.v  GotoString.v  Main.v  Makefile  README  _CoqProject
symbolic_execution/: outline.org  outline.org~
technology_review/: Technology_Survey.md
while_analyser/: abstraction.mli  cfg.mli  envAbstractionNotRelational.ml  main.mli  numAbstractionInterval.ml  numAbstractionSign.ml  print.ml  print.mli  syntax.ml  while_parser.mly
xgil/: configure
(+6193 files in other folders)
